--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 <body>
     <div id="sketch-container"></div>
     <input type="range" id="slider" min="0" max="100" value="0" step="1">
+    <script src="https://cdn.jsdelivr.net/npm/exif-js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
     <script src="sketch.js"></script>
     <script src="artwork.js"></script>
