--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
             max-width: 100%;
             max-height: 100%;
         }
+        #sketch-container p {
+            position: absolute;
+            bottom: 40px;
+            width: 80%;
+        }
         #slider {
             position: absolute;
             bottom: 20px;
